tests/ui/const-generics/generic_const_exprs/issue-74713.rs
fn bug<'a>()
where
    [(); { //~ ERROR mismatched types
        let _: &'a (); //~ ERROR generic parameters may not be used in const operations
    }]:
{}

fn main() {}
